# order

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONVENTIONS.md  NOTICE  README.md  SPACETIME.md  discuss  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vite.viewer.config.ts
docs/: APPLE-CAL.md  ARCHITECTURE.md  CODEBASE-GUIDE.md  CONVENTIONS.md  GCAL-SYNC.md  PHILOSOPHY.md  RELEASING.md  SHEET-DRAWING.md  SPACETIME.md  gcal-multiday-design.md  ios-build-notes.md  seasons-design.md  todo-txt-design.md
scripts/: build-desktop.sh  build-ios.sh  cetl.sh  dedupe-spacetime.mjs  order-creative-projects.mjs  release.sh
skills/: README.md
skills/google-calendar-to-order/: SKILL.md
src/: App.tsx  index.css  main.test.ts  main.tsx  order.css  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_agents.rs  ai_models.rs  applecal.rs  claude_cli.rs  cli_agent_runtime.rs  codex_cli.rs  fts.rs  gcal.rs  lib.rs  main.rs  menu.rs  pi_config.rs  publish.rs  publish_ios.rs  search.rs  terminal.rs  vault.rs  vault_fs.rs  vault_watcher.rs  watcher.rs
src-tauri/src/commands/: ai.rs  system.rs
src-tauri/src/commands/vault/: scan_cmds.rs
src-tauri/src/mcp/: paths.rs
src-tauri/src/vault/: config_seed.rs  getting_started.rs
src-tauri/tauri-plugin-vault/: Cargo.toml  README.md  build.rs
src-tauri/tauri-plugin-vault/ios/: Package.swift  README.md
src-tauri/tauri-plugin-vault/ios/Sources/: VaultPlugin.swift
src-tauri/tauri-plugin-vault/permissions/: default.toml
src-tauri/tauri-plugin-vault/permissions/autogenerated/: reference.md
src-tauri/tauri-plugin-vault/permissions/autogenerated/commands/: restore.toml
src-tauri/tauri-plugin-vault/permissions/schemas/: schema.json
src-tauri/tauri-plugin-vault/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
src-viewer/: ViewerApp.tsx  ViewerNote.tsx  index.html  main.tsx  viewer.css
src/components/: AddRemoteModal.tsx  AiActionCard.tsx  AiAgentsOnboardingPrompt.tsx  AiPanel.test.tsx  AiPanel.tsx  AiPanelChrome.tsx  AiProviderSettings.tsx  ArchivedNoteBanner.tsx  BreadcrumbBar.visibility.test.tsx  CMEditor.tsx  CalendarView.notes-to-events.test.ts  CalendarView.tsx  Card.tsx  CardGrid.tsx  CodeMirrorSurface.tsx  CommandPalette.tsx  CommitDialog.test.tsx  CommitDialog.tsx  DrawingSurface.tsx  DynamicPropertiesPanel.tsx  EditableValue.tsx  Editor.css  EditorRightPanel.tsx  EditorTheme.css  FeedbackDialog.tsx  FilePreview.tsx  FilterFieldCombobox.tsx  FilterPillStack.tsx  FolderAutocomplete.tsx  FolderTabs.tsx  FolderTree.test.tsx  FolderTree.tsx  FrontmatterInspector.tsx  FtsOverlay.tsx  GitRepositorySelect.tsx  IconEditableValue.tsx  ImageInspector.tsx  InlineWikilinkInput.tsx  LazyCell.tsx  ListCards.tsx  (+68 more)
src/constants/: feedback.ts
src/hooks/: appCommandCatalog.ts  appCommandDispatcher.ts  appKeyboardShortcuts.ts  editorBlockResolution.ts  editorFocusUtils.ts  frontmatterOps.ts  rawEditorEntryState.ts  useAiAgentPreferences.test.ts  useAiAgentPreferences.ts  useAppKeyboard.test.ts  useCliAiAgent.test.ts  useCliAiAgent.ts  useCommitFlow.test.ts  useCommitFlow.ts  useDragRegion.test.tsx  useDragRegion.ts  useEditor.ts  useEntryActions.ts  useFilters.ts  useGitSetupState.ts  useImageDrop.test.ts  useTaxonomy.ts  (+17 more)
(+193 files in other folders)
