[package]
name = "order"
version = "0.1.0"
description = "Order — your notes, at home at last."
edition = "2021"
rust-version = "1.77"

[lib]
name = "order_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
percent-encoding = "2"
ureq = { version = "2", default-features = false, features = ["json", "native-tls", "gzip"] }
base64 = "0.22"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-vault = { path = "tauri-plugin-vault" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
rayon = "1"
notify = "6"
notify-debouncer-full = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
