[package]
name = "order"
version = "0.1.2"
description = "Order — your notes, at home at last."
edition = "2021"
rust-version = "1.77"

[lib]
name = "order_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
percent-encoding = "2"
ureq = { version = "2", default-features = false, features = ["json", "native-tls", "gzip"] }
native-tls = "0.2"
base64 = "0.22"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-vault = { path = "tauri-plugin-vault" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
rayon = "1"
notify = "6"
notify-debouncer-full = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "5"
portable-pty = "0.9.0"
sha2 = "0.10"
getrandom = "0.2"
keyring = "2"
open = "5"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"

# Apple EventKit (system calendar) — macOS + iOS only. Same objc2 family Tauri
# already pulls in for the Apple targets.
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
  "NSArray", "NSString", "NSDate", "NSPredicate", "NSError", "NSCalendar",
  "NSTimeZone", "NSEnumerator", "NSObject",
] }
objc2-event-kit = { version = "0.3", features = [
  "block2", "EKTypes", "EKObject", "EKCalendar", "EKCalendarItem", "EKEvent",
  "EKParticipant", "EKSource",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
